# assimp-Cpp-OpenGL-skeletal-animation

Load_3D_model_2/: CMakeLists.txt  Camera.h  ForShader.h  Game.cpp  Game.h  InputHandler.h  Mesh.h  Model.h  SkyBox.h  TextRendering.h  Triangle.cpp  Triangle.h  main.cpp
